--- a/index.html
+++ b/index.html
@@ -16,13 +16,18 @@
   stroke: rgba(224, 194, 139, 0.884);
 }
 
+.legend {
+    font-weight: bold;
+    text-anchor: middle;
+}
+
 </style>
 <svg width="960" height="500"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 
 <script>
 var svg = d3.select("svg"),
-    margin = {top: 20, right: 80, bottom: 30, left: 50},
+    margin = {top: 20, right: 40, bottom: 80, left: 50},
     width = svg.attr("width") - margin.left - margin.right,
     height = svg.attr("height") - margin.top - margin.bottom,
     g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
@@ -59,6 +64,8 @@ d3.csv("avg_goals.csv", type, function(error, data){
 
     z.domain(leagues.map(function(l, i) { return i; }));
 
+    legendSpace = width/(data.columns.length - 1);
+
     g.append("g")
         .attr("class", "axis axis--x")
         .attr("transform", "translate(0," + height + ")")
@@ -84,12 +91,21 @@ d3.csv("avg_goals.csv", type, function(error, data){
         .attr("d", function(d) { return line(d.values); })
         .style("stroke", function(d, i) { return z(i); });
     
-    league.append("text")
-        .datum(function(d) { return {id: d.id, value: d.values[d.values.length - 1]}; })
-        .attr("transform", function(d) { return "translate(" + x(d.value.season) + "," + y(d.value.avgGoals) + ")"; })
-        .attr("x", 3)
-        .attr("dy", "0.35em")
-        .style("font", "10px sans-serif")
+    // league.append("text")
+    //     .datum(function(d) { return {id: d.id, value: d.values[d.values.length - 1]}; })
+    //     .attr("transform", function(d) { return "translate(" + x(d.value.season) + "," + y(d.value.avgGoals) + ")"; })
+    //     .attr("x", 3)
+    //     .attr("dy", "0.35em")
+    //     .style("font", "10px sans-serif")
+    //     .text(function(d) { return d.id; });
+    
+    var legend = g.selectAll(".legend")
+        .data(leagues)
+      .enter().append("text")
+        .attr("class", "legend")
+        .attr("x", function(d, i) { return ((legendSpace/2) + i*legendSpace); })
+        .attr("y", height + (margin.bottom/2) + 15)
+        .style("fill", function(d, i) { return z(i); })
         .text(function(d) { return d.id; });
 
     // debugger;
