--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 
 <style>
-p {
+.info {
   font: 15px sans-serif;
   margin: 0px 55px;
 }
@@ -45,13 +45,13 @@ div.tooltip {
 }
 </style>
 
-<svg width="960" height="500"></svg>
+<svg width="960" height="540"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<p>Click on the legend labels to toggle the line of the respective leagues.</p>
+<!-- <p>Click on the legend labels to toggle the line of the respective leagues.</p> -->
 
 <script>
 var svg = d3.select("svg"),
-    margin = {top: 20, right: 40, bottom: 80, left: 50},
+    margin = {top: 20, right: 40, bottom: 120, left: 50},
     width = svg.attr("width") - margin.left - margin.right,
     height = svg.attr("height") - margin.top - margin.bottom,
     g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
@@ -69,7 +69,7 @@ var div = d3.select("body").append("div")
     .attr("class", "tooltip")
     .style("opacity", 0);
 
-d3.csv("avg_goals.csv", type, function(error, data){
+d3.csv("data/avg_goals.csv", type, function(error, data){
     if (error) throw error;
 
     var leagues = data.columns.slice(1).map(function(id){
@@ -175,8 +175,12 @@ d3.csv("avg_goals.csv", type, function(error, data){
                 return active ? z(i) : "grey"; 
               });
             d.active = active
-        })
+        });
     
+    g.append("text")
+      .text("*Click on the legend labels to toggle the line of the respective leagues.")
+      .attr("class", "info")
+      .attr("y", height + (margin.bottom/2) + 50);
 
     // draw scatter plot
     var series = leagues.map(function(l) { return l.values; });
