--- a/index.html
+++ b/index.html
@@ -129,6 +129,30 @@ d3.csv("data/avg_goals.csv", type, function(error, data){
         })
         .style("opacity", function(d) {
             return d.id == "Brasileirao" ? 1 : 0.1 ;
+        })
+        .on("click", function(d, i) {
+            var active = d.active ? false : true,
+            newOpacity = active ? 1 : 0;
+            d3.selectAll("#tag"+d.id.replace(/\s+/g, ''))
+              .transition().duration(100)
+              .style("opacity", function() {
+                  return active ? 1 : 0.1;
+              })
+              .style("stroke", function() {
+                return active ? z(i) : "grey"; 
+              });
+            d3.selectAll("#serie"+i)
+              .transition().duration(100)
+              .style("opacity", newOpacity);
+            d3.selectAll("#legend"+i)
+              .transition().duration(100)
+              .style("opacity", function() {
+                  return active ? 1 : 0.4;
+              })
+              .style("fill", function() {
+                return active ? z(i) : "grey"; 
+              });
+            d.active = active
         });
         
     // draw legends
